--- a/refs.bib
+++ b/refs.bib
@@ -1,5 +1,5 @@
 @book{crystal2012english,
-  title={English as a Global Language},
+  title={{English as a Global Language}},
   author={Crystal, D.},
   isbn={9781107394605},
   series={Canto Classics},
@@ -8,10 +8,10 @@
 }
 
 @book{hutchins1986machine,
-  title={Machine Translation: Past, Present, Future},
+  title={{Machine Translation: Past, Present, Future}},
   author={Hutchins, W.J.},
   isbn={9780135435212},
-  series={Ellis Horwood Series in Computers \& Their Applications},
+  series={{Ellis Horwood Series in Computers \& Their Applications}},
   year={1986},
   publisher={Prentice Hall}
 }
@@ -42,7 +42,7 @@
 }
 
 @book{koehn2010statistical,
-  title={Statistical Machine Translation},
+  title={{Statistical Machine Translation}},
   author={Koehn, P.},
   isbn={9780521874151},
   lccn={2010294134},
@@ -67,20 +67,34 @@ year = {2000},
 @inproceedings{berger1994candide,
   title={{The Candide system for machine translation}},
   author={Berger, A.L. and Brown, P.F. and Della~Pietra, S.A. and Della~Pietra, V.J. and Gillett, J.R. and Lafferty, J.D. and Mercer, R.L. and Printz, H. and Ure{\v{s}}, L.},
-  booktitle={Proceedings of the workshop on Human Language Technology},
+  booktitle={{Proceedings of the workshop on Human Language Technology}},
   pages={157--162},
   year={1994},
   organization={Association for Computational Linguistics}
 }
+@incollection{McCulloch1988,
+ author = {McCulloch, W.~S. and Pitts, W.},
+ title = {{A Logical Calculus of the Ideas Immanent in Nervous Activity}},
+ booktitle = {Neurocomputing: Foundations of Research},
+ editor = {Anderson, J. A. and Rosenfeld, E.},
+ year = {1988},
+ isbn = {0-262-01097-6},
+ pages = {15--27},
+ numpages = {13},
+ dlacmurl = {http://dl.acm.org/citation.cfm?id=65669.104377},
+ acmid = {104377},
+ publisher = {MIT Press},
+ address = {Cambridge, MA, USA},
+} 
+
 
 @article{brown1993,
  author = {Brown, P.F. and Della~Pietra, V.J.  and Della~Pietra, S.A. and Mercer, R.L.},
  title = {{The Mathematics of Statistical Machine Translation: Parameter Estimation}},
- journal = {Computational Linguistics},
+ journal = {{Computational Linguistics}},
  issue_date = {June 1993},
  volume = {19},
  number = {2},
- month = jun,
  year = {1993},
  issn = {0891-2017},
  pages = {263--311},
@@ -103,7 +117,7 @@ year = {2000},
 @inproceedings{koehn2003,
         Address = {Stroudsburg, PA, USA},
         Author = {Koehn, P. and Och, F.J. and Marcu, D.},
-        Booktitle = {Proceedings of the 2003 Conference of the North American Chapter of the Association for Computational Linguistics on Human Language Technology},
+        Booktitle = {{Proceedings of the 2003 Conference of the North American Chapter of the Association for Computational Linguistics on Human Language Technology}},
         Pages = {48--54},
         Publisher = {Association for Computational Linguistics},
         location = {Edmonton, Canada},
@@ -116,7 +130,7 @@ year = {2000},
 @inproceedings{koehn2007,
         Address = {Prague},
         Author = {Koehn, P. and Hoang, H.},
-        Booktitle = {Proceedings of the 2007 Joint Conference on Empirical Methods in Natural Language Processing and Computational Natural Language Learning},
+        Booktitle = {{Proceedings of the 2007 Joint Conference on Empirical Methods in Natural Language Processing and Computational Natural Language Learning}},
         Date-Added = {2015-06-21 18:25:10 +0100},
         Date-Modified = {2015-06-21 18:29:44 +0100},
         Pages = {868--876},
@@ -139,7 +153,7 @@ year = {2000},
 @INPROCEEDINGS{Johnson07improvingtranslation,
     author={Johnson, J.H. and Martin, J.},
     title = {Improving translation quality by discarding most of the phrasetable},
-    booktitle = {Proceedings of EMNLP-CoNLL'07},
+    booktitle = {{Proceedings of EMNLP-CoNLL'07}},
     year = {2007},
     pages = {967--975}
 }
@@ -148,7 +162,7 @@ year = {2000},
 @inproceedings{zora80038,
            month = {August},
           author = {J.R. Smith and H. Saint-Amand and M. Plamada and P. Koehn and C. Callison-Burch and A. Lopez},
-       booktitle = {Proceedings of the 51st Annual Meeting of the Association for Computational Linguistics (Volume 1: Long Papers)},
+       booktitle = {{Proceedings of the 51st Annual Meeting of the Association for Computational Linguistics (Volume 1: Long Papers)}},
          address = {Sofia, Bulgaria},
            title = {{Dirt cheap web-scale parallel text from the Common Crawl}},
        publisher = {Association for Computational Linguistics},
@@ -159,7 +173,7 @@ year = {2000},
 @inproceedings{zaidan2011,
  author = {Zaidan, O.F. and Callison-Burch, C.},
  title = {{Crowdsourcing Translation: Professional Quality from Non-professionals}},
- booktitle = {Proceedings of the 49th Annual Meeting of the Association for Computational Linguistics: Human Language Technologies -- Volume 1},
+ booktitle = {{Proceedings of the 49th Annual Meeting of the Association for Computational Linguistics: Human Language Technologies -- Volume 1}},
  series = {HLT '11},
  year = {2011},
  isbn = {978-1-932432-87-9},
@@ -174,7 +188,7 @@ year = {2000},
 @misc{quince08,
  title={{Why Austria is Ireland}}, 
  author={Quince, M.},
- booktitle={Language Log},
+ booktitle={{Language Log}},
  year=2008,
  month={March},
  note={Accessed: November 1, 2014},
@@ -184,7 +198,7 @@ year = {2000},
 @article{ketzan2007rebuilding,
   title={{Rebuilding Babel: Copyright and the Future of Online Machine Translation}},
   author={Ketzan, E.},
-  journal={Tulane Journal of Technology \& Intellectual Property},
+  journal={{Tulane Journal of Technology \& Intellectual Property}},
   volume={9},
   pages={205},
   year={2007},
@@ -193,7 +207,7 @@ year = {2000},
 @misc{chin07suggest,
  title={{Suggest a better translation}},
  author={Chin, J.},
- booktitle={Google Official Blog},
+ booktitle={{Google Official Blog}},
  year=2007,
  month={March},
  note={Accessed: November 2, 2014},
@@ -203,7 +217,7 @@ year = {2000},
 @misc{galvez09toolkit,
  title={{Translating the world's information with Google Translator Toolkit}},
  author={Galvez, M. and Bhansali, S.},
- booktitle={Google Official Blog},
+ booktitle={{Google Official Blog}},
  year=2009,
  month={June},
  note={Accessed: November 2, 2014},
@@ -213,7 +227,7 @@ year = {2000},
 @misc{kelman14community,
  title={{Translating the world's information with Google Translator Toolkit}},
  author={Kelman, S.},
- booktitle={Google Translate Blog},
+ booktitle={{Google Translate Blog}},
  year=2014,
  month={July},
  note={Accessed: November 2, 2014},
@@ -223,7 +237,7 @@ year = {2000},
 @misc{porsiel12sec,
  title={{Machine Translation and Data Security}},
  author={Porsiel, J.},
- booktitle={TCWorld Magazine},
+ booktitle={{TCWorld Magazine}},
  year=2012,
  month={February},
  note={Accessed: October 23, 2014},
@@ -233,7 +247,7 @@ year = {2000},
 @misc{shankland13daily,
  title={{Google Translate now serves 200 million people daily}},
  author={Shankland, S.},
- booktitle={CNET},
+ booktitle={{CNET}},
  year=2013,
  month={May},
  note={Accessed: October 23, 2014},
@@ -243,7 +257,7 @@ year = {2000},
 @misc{och12barrier,
  title={{Breaking down the language barrier--six years in}},
  author={Och, F.},
- booktitle={Google Official Blog},
+ booktitle={{Google Official Blog}},
  year=2012,
  month={April},
  note={Accessed: October 23, 2014},
@@ -264,7 +278,7 @@ year = {2000},
 @misc{depalma14leak,
  title={{Free Machine Translation Can Leak Data}},
  author={DePalma, D.},
- booktitle={TCWorld Magazine},
+ booktitle={{TCWorld Magazine}},
  year=2014,
  month={July},
  note={Accessed: October 23, 2014},
@@ -273,15 +287,15 @@ year = {2000},
 
 @techreport{tene13overextended,
   author = {Tene, O. and Wolf, C.},
-  title = {Overextended: Jurisdiction and Applicable Law under the EU General Data Protection Regulation},
+  title = {{Overextended: Jurisdiction and Applicable Law under the EU General Data Protection Regulation}},
   month = {January},
   year = {2013},
-  institution = {The Future of Privacy Forum},
+  institution = {{The Future of Privacy Forum}},
   address = {Washington, DC}
 }
 
 @book{lanier2014owns,
-  title={Who Owns the Future?},
+  title={{Who Owns the Future?}},
   author={Lanier, J.},
   isbn={9781451654974},
   lccn={2014379394},
@@ -297,8 +311,8 @@ year = {2000},
                   Ram\'irez-S\'anchez and F.~M. Tyers},
   title =        {Apertium: a free/open-source platform for rule-based
                   machine translation},
-  journal =      {Machine Translation},
-  note =         {Special Issue: Free/Open-Source Machine Translation},
+  journal =      {{Machine Translation}},
+  note =         {{Special Issue: Free/Open-Source Machine Translation}},
   year =         2011,
   volume =       25,
   number =       2,
@@ -317,7 +331,7 @@ year = {2000},
 @InProceedings{TIEDEMANN12.463,
   author = {Tiedemann, J.},
   title = {{Parallel Data, Tools and Interfaces in OPUS}},
-  booktitle = {Proceedings of the Eight International Conference on Language Resources and Evaluation (LREC'12)},
+  booktitle = {{Proceedings of the Eight International Conference on Language Resources and Evaluation (LREC'12)}},
   year = {2012},
   month = {may},
   date = {23-25},
@@ -331,19 +345,21 @@ year = {2000},
 @inproceedings{SkadinsEA:LREC14,
   author =       {Skadi\c{n}\v{s}, R. and Tiedemann, J. and Rozis, R. and Deksne, D.},
   title =        {{Billions of Parallel Words for Free: Building and Using the EU Bookshop Corpus}},
-  booktitle =    {Proceedings of the 9th International Conference
-                  on Language Resources and Evaluation (LREC-2014)},
+  booktitle =    {{Proceedings of the 9th International Conference
+                  on Language Resources and Evaluation (LREC-2014)}},
   year =         2014,
   month =        {May},
   address =      {Reykjavik, Iceland},
+  doi = {10.13140/2.1.3343.6800},
+  pages = {1850--1855},
   publisher =    {European Language Resources Association (ELRA)},
 }
 
 @InCollection{Tiedemann:RANLP5,
   author =	  {Tiedemann, J.},
-  title =	  {News from {OPUS} - {A} Collection of Multilingual
-                  Parallel Corpora with Tools and Interfaces},
-  booktitle =	  {Recent Advances in Natural Language Processing},
+  title =	  {{News from {OPUS} - {A} Collection of Multilingual
+                  Parallel Corpora with Tools and Interfaces}},
+  booktitle =	  {{Recent Advances in Natural Language Processing}},
   publisher =	  {John Benjamins, Amsterdam/Philadelphia},
   year =          2009,
   pages =         {237--248},
@@ -353,6 +369,7 @@ year = {2000},
   address =	  {Borovets, Bulgaria},
   isbn =          {978 90 272 4825 1},
   xpdf =           {http://stp.lingfil.uu.se/~joerg/published/ranlp-V.pdf},
+  doi = {10.1075/cilt.309.19tie},
   topic  =        {Parallel corpora}
 }
 
@@ -362,21 +379,40 @@ year = {2000},
                   application to the inference of shallow-transfer
                   machine translation rules from scarce bilingual
                   corpora},
-  journal =      {Computer Speech & Language},
+  journal =      {{Computer Speech \& Language}},
   year =         2015,
   volume =       32,
   number =       1,
   pages =        {46--90},
   pdfurl =       {http://www.dlsi.ua.es/~fsanchez/pub/pdf/sanchez-cartagena15a.pdf}
 }
+@article{trosterud2012evaluating,
+  title={{Evaluating North S{\'a}mi to Norwegian assimilation RBMT}},
+  author={Trosterud, Trond and Unhammer, Kevin Brubeck},
+  journal={Free/Open-Source Rule-Based Machine Translation},
+  volume={14},
+  pages={13},
+  year={2012}
+}
+
+@inproceedings{unhammer2009rfr,
+  address = {Alicante},
+  author = {Kevin Unhammer and Trond Trosterud},
+  booktitle = {{Proceedings of the First International Workshop on Free/Open-Source Rule-Based Machine Translation}},
+  pages = {35--42},
+  title = {{Reuse of Free Resources in Machine Translation between Nynorsk and Bokm{\aa}l}},
+  url = {http://hdl.handle.net/10045/12025},
+  year = 2009,
+}
+
 
 @InProceedings{sanchezmartinez09d,
   author =       {S{\'{a}}nchez-Mart{\'{\i}}nez, F. and Forcada,
                   M.~L. and Way, A.},
   title =        {Hybrid rule-based -- example-based {MT}: {F}eeding
                   {A}pertium with sub-sentential translation units},
-  booktitle =    {Proceedings of the 3rd Workshop on Example-Based
-                  Machine Translation},
+  booktitle =    {{Proceedings of the 3rd Workshop on Example-Based
+                  Machine Translation}},
   pages =        {11--18},
   year =         2009,
   editor =       {Forcada, Mikel L. and Way, Andy},
@@ -397,10 +433,10 @@ year = {2000},
 } 
 @inproceedings{currey2017copy,
   author = {Currey, A. and Miceli Barone, A.~V. and Heafield, K.},
-  title = {Copied Monolingual Data Improves {Low-Resource} Neural Machine Translation},
+  title = {{Copied Monolingual Data Improves {Low-Resource} Neural Machine Translation}},
   year = {2017},
   month = {September},
-  booktitle = {Proceedings of the {EMNLP} 2017 Second Conference on Machine Translation {(WMT17)}},
+  booktitle = {{Proceedings of the {EMNLP} 2017 Second Conference on Machine Translation {(WMT17)}}},
   address = {Copenhagen, Denmark},
   url = {https://kheafield.com/papers/edinburgh/copy\_paper.pdf},
 }
@@ -423,7 +459,7 @@ year = {2000},
   institution = {W3C},
 }
 @book{donaldson2008dutch,
-  title={Dutch: A Comprehensive Grammar},
+  title={{Dutch: A Comprehensive Grammar}},
   author={Donaldson, B.},
   isbn={9781134082353},
   series={Routledge Comprehensive Grammars},
@@ -456,30 +492,13 @@ volume  = {abs/1609.08144}
 @article{sennrich2015neural,
   title={{Neural Machine Translation of Rare Words with Subword Units}},
   author={Sennrich, R. and Haddow, B. and Birch, A.},
-  booktitle = {Proceedings of the 54th Annual Meeting of the Association for Computational Linguistics (Volume 1: Long Papers)},
+  booktitle = {{Proceedings of the 54th Annual Meeting of the Association for Computational Linguistics (Volume 1: Long Papers)}},
   month     = {August},
   year      = {2016},
   address   = {Berlin, Germany},
   publisher = {Association for Computational Linguistics},
   pages     = {1715--1725},
   aclurl       = {http://www.aclweb.org/anthology/P16-1162},
-  year={2015}
-}
-
-@book{donaill1977focloir,
-  title={Focl{\'o}ir Gaeilge-B{\'e}arla},
-  author={{\'O}~{D}{\'o}naill, N.},
-  lccn={79395254},
-  year={1977},
-  publisher={Oifig an tSol{\'a}thair}
-}
-
-@book{debhaldraithe1959english,
-  title={{English-Irish Dictionary: With Terminological Additions and Corrections}},
-  author={de~{B}haldraithe, T.},
-  year={1959},
-  isbn={1857910362},
-  publisher={An G{\'u}m}
 }
 
 @phdthesis{elain09,
@@ -494,7 +513,7 @@ volume  = {abs/1609.08144}
   booktitle = {{Proceedings of the First Celtic Language Technology Workshop}},
   year      = {2014},
   address   = {Dublin, Ireland},
-  publisher = {Association for Computational Linguistics and Dublin City University},
+  publisher = {{Association for Computational Linguistics and Dublin City University}},
   pages     = {50--54},
   acmurl       = {http://www.aclweb.org/anthology/W14-4607}
 }
@@ -540,7 +559,7 @@ volume  = {abs/1609.08144}
 @article{tyers2009apertium,
   title={{apertium-cy--a collaboratively-developed free RBMT system for Welsh to English.}},
   author={Tyers, F.~M. and Donnelly, K.},
-  journal={The Prague Bulletin of Mathematical Linguistics},
+  journal={{The Prague Bulletin of Mathematical Linguistics}},
   volume={91},
   pages={57--66},
   year={2009}
@@ -549,7 +568,7 @@ volume  = {abs/1609.08144}
 @article{tyers2010rule,
   title={{Rule-based Breton to French machine translation}},
   author={Tyers, F.~M.},
-  journal={Proceeedings of the 14th Annual Conference of the European Association of Machine Translation, EAMT10},
+  journal={{Proceeedings of the 14th Annual Conference of the European Association of Machine Translation, EAMT10}},
   pages={174--181},
   year={2010}
 }
@@ -565,19 +584,6 @@ volume  = {abs/1609.08144}
   pages =        {145--152},
   month =        {May},
   address =      {Antalya, Turkey}
-}
-@InProceedings{sanchezmartinez09d,
-  author =       {S{\'{a}}nchez-Mart{\'{\i}}nez, F. and Forcada,
-                  M.~L. and Way, A.},
-  title =        {{Hybrid rule-based -- example-based MT: Feeding
-                  Apertium with sub-sentential translation units}},
-  booktitle =    {Proceedings of the 3rd Workshop on Example-Based
-                  Machine Translation},
-  pages =        {11--18},
-  year =         2009,
-  editor =       {Forcada, Mikel L. and Way, Andy},
-  address =      {Dublin, Ireland},
-  month =        {November}
 }
 @Article{sanchez-martinez09b,
   author =       {S{\'{a}}nchez-Mart{\'{\i}}nez, F. and Forcada,
@@ -654,7 +660,7 @@ volume  = {abs/1609.08144}
   editor = {Mireia Ginestí Rosell},
   author = {Forcada, M.~L. and Bonev, B.~I. and Ortiz~Rojas, S. and P{\'e}rez~Ortiz, J.~A. and Ram{\'\i}rez~Sanchez, G. and S{\'a}nchez~Mar{\'\i}nez, F. and Armentano-Oller, C. and Montava, M.~A.  and Tyers, F.~M.},
   edition = {2.0},
-  organization = {Departament de Llenguatges i Sistemes Inform{\`a}tics},
+  organization = {{Departament de Llenguatges i Sistemes Inform{\`a}tics}},
   title = {{Documentation of the Open-Source Shallow-Transfer Machine Translation Platform Apertium}},
  year = {2010}
 }
@@ -699,7 +705,7 @@ volume  = {abs/1609.08144}
 @Book{LWP-Irish,
   author = {Judge, J. and N\'i~Chasaide, A. and N\'i~Dhubhda, R. and
     Scannell, K.~P. and U\'i~Dhonnchadha, E.},
-  title = {{An Ghaeilge sa Ré Dhigiteach -- The Irish Language in the Digital
+  title = {{An Ghaeilge sa R\'e Dhigiteach -- The Irish Language in the Digital
     Age}},
   publisher = {Springer},
   year = {2012},
@@ -759,7 +765,7 @@ volume  = {abs/1609.08144}
 @article{chasaide2017abair,
   title={{The Abair initiative: Bringing spoken Irish into the digital space}},
   author={N\'i~Chasaide, A. and N\'i~Chiar\'ain, N. and Wendler, C. and Berthelsen, H. and Murphy, A. and Gobl, C.},
-  journal={Proceedings of Interspeech 2017},
+  journal={{Proceedings of Interspeech 2017}},
   doi={10.21437/Interspeech.2017-1407},
   pages={2113--2117},
   publisher={ISCA},
@@ -834,27 +840,26 @@ pages={261--266}
 
 @book{donaill1977focloir,
   title={Focl{\'o}ir Gaeilge-B{\'e}arla},
-  editor={{\'O}~{D}{\'o}naill, Niall},
+  author={{\'O}~{D}{\'o}naill, N.},
   lccn={79395254},
   year={1977},
-  publisher={Oifig an tSol{\'a}thair}
+  publisher={{Oifig an tSol{\'a}thair}}
 }
-
-
 
 @book{debhaldraithe1959english,
   title={{English-Irish Dictionary: With Terminological Additions and Corrections}},
-  editor={de~{B}haldraithe, Tom{\'a}s},
+  author={de~{B}haldraithe, T.},
   year={1959},
   isbn={1857910362},
-  publisher={An G{\'u}m}
+  publisher={{An G{\'u}m}}
 }
+
 @book{odonaill1991focloirbeag,
   title={{An Focl\'oir Beag: Gaeilge--Gaeilge}},
   editor={{\'O}~{D}{\'o}naill, N. and Ua~Maoileoin, P.},
   year={1991},
   isbn={1-85791-364-7},
-  publisher={An G{\'u}m}
+  publisher={{An G{\'u}m}}
 }
 
 @INPROCEEDINGS{Papineni02bleu,
@@ -895,7 +900,7 @@ ISSN={0018-9219},
 @article{Jelinek2009dawn,
  author = {Jelinek, F.},
  title = {{The Dawn of Statistical ASR and MT}},
- journal = {Computational Linguistics},
+ journal = {{Computational Linguistics}},
  issue_date = {December 2009},
  volume = {35},
  number = {4},
@@ -941,4 +946,476 @@ L1 English and L1 Polish Writers}},
   pages = {1--40},
   doi = {10.1017/S1351324914000114},
   docURL = {https://journals.cambridge.org/article_S1351324914000114},
+}
+
+@InProceedings{gough2004robust,
+  title={{Robust large-scale EBMT with marker-based segmentation}},
+  author={Gough, N. and Way, A.},
+  booktitle={{TMI 2004 -- 10th International Conference on Theoretical and Methodological Issues in Machine Translation}},
+  year={2004}
+}
+
+@book{goodfellow2016dl,
+   title =     {{Deep Learning}},
+   author =    {Goodfellow, I. and Bengio, Y. and Courville, A.},
+   publisher = {MIT Press},
+   note = {Preprint: \href{http://www.deeplearningbook.org/}{http://www.deeplearningbook.org/}},
+   year =      {2016},
+}
+
+@book{roche1997fst,
+ author = {Emmanuel Roche and Yves Schabes},
+ title = {{Finite-State Language Processing.}},
+ editor = {Emmanuel Roche and Yves Schabes},
+ year = {1997},
+ blurl = {http://dl.acm.org/citation.cfm?id=973927.973932},
+ publisher = {The MIT Press},
+ address = {Cambridge, MA, USA},
+} 
+
+@INPROCEEDINGS{Mikel96beyondmealy,
+    author = {\~Neco, R. and Forcada, M.~L.},
+    title = {{Beyond Mealy machines: Learning translators with recurrent neural networks}},
+    booktitle = {{In Proceedings of the World Conference on Neural Networks '96}},
+    year = {1996},
+    pages = {408--411}
+}
+
+@InProceedings{cho2014rnnencdec,
+  author    = {Cho, Kyunghyun  and  van Merrienboer, Bart  and  Gulcehre, Caglar  and  Bahdanau, Dzmitry  and  Bougares, Fethi  and  Schwenk, Holger  and  Bengio, Yoshua},
+  title     = {{Learning Phrase Representations using RNN Encoder--Decoder for Statistical Machine Translation}},
+  booktitle = {{Proceedings of the 2014 Conference on Empirical Methods in Natural Language Processing (EMNLP)}},
+  year      = {2014},
+  publisher = {Association for Computational Linguistics},
+  pages     = {1724--1734},
+  acmurl       = {http://www.aclweb.org/anthology/D14-1179}
+}
+@article{Hochreiter:1997:LSM:1246443.1246450,
+ author = {Hochreiter, Sepp and Schmidhuber, J\"{u}rgen},
+ title = {{Long Short-Term Memory}},
+ journal = {{Neural Computation}},
+ issue_date = {November 15, 1997},
+ volume = {9},
+ number = {8},
+ year = {1997},
+ issn = {0899-7667},
+ pages = {1735--1780},
+ numpages = {46},
+ xurl = {http://dx.doi.org/10.1162/neco.1997.9.8.1735},
+ doi = {10.1162/neco.1997.9.8.1735},
+ acmid = {1246450},
+ publisher = {MIT Press},
+ address = {Cambridge, MA, USA},
+} 
+
+@inproceedings{jassem04pwn,
+author = {Jassem, Krzysztof},
+year = {2004},
+pages = {98--105},
+title = {{Applying Oxford-PWN English-Polish Dictionary to Machine Translation}},
+booktitle = {{Proceedings of 9th European Association for Machine Translation Workshop, ``Broadening horizons of machine translation and its
+applications''}},
+publisher = {European Association for Machine Translation}
+}
+
+@ARTICLE{6773024,
+author={C. E. Shannon},
+journal={The Bell System Technical Journal},
+title={A mathematical theory of communication},
+year={1948},
+volume={27},
+number={3},
+pages={379-423},
+doi={10.1002/j.1538-7305.1948.tb01338.x},
+ISSN={0005-8580},
+}
+
+@inproceedings{och2002maxent,
+ author = {Och, Franz Josef and Ney, Hermann},
+ title = {{Discriminative Training and Maximum Entropy Models for Statistical Machine Translation}},
+ booktitle = {{Proceedings of the 40th Annual Meeting on Association for Computational Linguistics}},
+ series = {ACL '02},
+ year = {2002},
+ location = {Philadelphia, Pennsylvania},
+ pages = {295--302},
+ numpages = {8},
+ dourl = {https://doi.org/10.3115/1073083.1073133},
+ doi = {10.3115/1073083.1073133},
+ acmid = {1073133},
+ publisher = {Association for Computational Linguistics},
+ address = {Stroudsburg, PA, USA},
+} 
+
+@article{och2004alignment,
+  title={The Alignment Template approach to Statistical Machine Translation},
+  author={Och, Franz Josef and Ney, Hermann},
+  journal={Computational linguistics},
+  volume={30},
+  number={4},
+  pages={417--449},
+  year={2004},
+  publisher={MIT Press}
+}
+@inproceedings{och1999wordclass,
+ author = {Och, Franz Josef},
+ title = {{An Efficient Method for Determining Bilingual Word Classes}},
+ booktitle = {{Proceedings of the Ninth Conference on European Chapter of the Association for Computational Linguistics}},
+ series = {EACL '99},
+ year = {1999},
+ location = {Bergen, Norway},
+ pages = {71--76},
+ numpages = {6},
+ durl = {https://doi.org/10.3115/977035.977046},
+ doi = {10.3115/977035.977046},
+ acmid = {977046},
+ publisher = {Association for Computational Linguistics},
+ address = {Stroudsburg, PA, USA},
+} 
+@InProceedings{sennrich-haddow:2016:WMT,
+  author    = {Sennrich, Rico  and  Haddow, Barry},
+  title     = {{Linguistic Input Features Improve Neural Machine Translation}},
+  booktitle = {{Proceedings of the First Conference on Machine Translation}},
+  year      = {2016},
+  address   = {Berlin, Germany},
+  publisher = {Association for Computational Linguistics},
+  pages     = {83--91},
+  durl       = {http://www.aclweb.org/anthology/W16-2209}
+}
+
+@inproceedings{Chiang:2005:HPM:1219840.1219873,
+ author = {Chiang, David},
+ title = {{A Hierarchical Phrase-based Model for Statistical Machine Translation}},
+ booktitle = {{Proceedings of the 43rd Annual Meeting on Association for Computational Linguistics}},
+ series = {ACL '05},
+ year = {2005},
+ location = {Ann Arbor, Michigan},
+ pages = {263--270},
+ numpages = {8},
+ durl = {https://doi.org/10.3115/1219840.1219873},
+ doi = {10.3115/1219840.1219873},
+ acmid = {1219873},
+ publisher = {Association for Computational Linguistics},
+ address = {Stroudsburg, PA, USA},
+} 
+@inproceedings{Zollmann:2006:SAM:1654650.1654671,
+ author = {Zollmann, Andreas and Venugopal, Ashish},
+ title = {{Syntax Augmented Machine Translation via Chart Parsing}},
+ booktitle = {{Proceedings of the Workshop on Statistical Machine Translation}},
+ series = {StatMT '06},
+ year = {2006},
+ location = {New York City, New York},
+ pages = {138--141},
+ numpages = {4},
+ xurl = {http://dl.acm.org/citation.cfm?id=1654650.1654671},
+ acmid = {1654671},
+ publisher = {Association for Computational Linguistics},
+ address = {Stroudsburg, PA, USA},
+} 
+@inproceedings{Zollmann:2008:SCP:1599081.1599225,
+ author = {Zollmann, Andreas and Venugopal, Ashish and Och, Franz and Ponte, Jay},
+ title = {{A Systematic Comparison of Phrase-based, Hierarchical and Syntax-augmented Statistical MT}},
+ booktitle = {{Proceedings of the 22nd International Conference on Computational Linguistics - Volume 1}},
+ series = {COLING '08},
+ year = {2008},
+ isbn = {978-1-905593-44-6},
+ location = {Manchester, United Kingdom},
+ pages = {1145--1152},
+ numpages = {8},
+ xurl = {http://dl.acm.org/citation.cfm?id=1599081.1599225},
+ acmid = {1599225},
+ publisher = {Association for Computational Linguistics},
+ address = {Stroudsburg, PA, USA},
+} 
+@article{MOHRI200269,
+title = "Weighted finite-state transducers in speech recognition",
+journal = "Computer Speech \& Language",
+volume = "16",
+number = "1",
+pages = "69 - 88",
+year = "2002",
+issn = "0885-2308",
+doi = "10.1006/csla.2001.0184",
+xurl = "http://www.sciencedirect.com/science/article/pii/S0885230801901846",
+author = "Mehryar Mohri and Fernando Pereira and Michael Riley"
+}
+@INPROCEEDINGS{Povey_ASRU2011_2011,
+         author = {Povey, Daniel and Ghoshal, Arnab and Boulianne, Gilles and Burget, Lukas and Glembek, Ondrej and Goel, Nagendra and Hannemann, Mirko and Motlicek, Petr and Qian, Yanmin and Schwarz, Petr and Silovsky, Jan and Stemmer, Georg and Vesely, Karel},
+          title = {{The Kaldi Speech Recognition Toolkit}},
+      booktitle = {{IEEE 2011 Workshop on Automatic Speech Recognition and Understanding}},
+           year = {2011},
+      publisher = {IEEE Signal Processing Society},
+       location = {Hilton Waikoloa Village, Big Island, Hawaii, US},
+           note = {IEEE Catalog No.: CFP11SRW-USB},
+           isbn = {978-1-4673-0366-8},
+            xpdf = {http://publications.idiap.ch/downloads/papers/2012/Povey_ASRU2011_2011.pdf}
+}
+@inproceedings{Iglesias:2009:HPT:1620754.1620817,
+ author = {Iglesias, Gonzalo and de Gispert, Adri\`{a} and Banga, Eduardo R. and Byrne, William},
+ title = {{Hierarchical Phrase-based Translation with Weighted Finite State Transducers}},
+ booktitle = {{Proceedings of Human Language Technologies: The 2009 Annual Conference of the North American Chapter of the Association for Computational Linguistics}},
+ series = {NAACL '09},
+ year = {2009},
+ isbn = {978-1-932432-41-1},
+ location = {Boulder, Colorado},
+ pages = {433--441},
+ numpages = {9},
+ xurl = {http://dl.acm.org/citation.cfm?id=1620754.1620817},
+ acmid = {1620817},
+ publisher = {Association for Computational Linguistics},
+ address = {Stroudsburg, PA, USA},
+} 
+@inproceedings{Allauzen:2012:PTE:2402069.2402077,
+ author = {Allauzen, Cyril and Riley, Michael},
+ title = {{A Pushdown Transducer Extension for the Openfst Library}},
+ booktitle = {{Proceedings of the 17th International Conference on Implementation and Application of Automata}},
+ series = {CIAA'12},
+ year = {2012},
+ isbn = {978-3-642-31605-0},
+ location = {Porto, Portugal},
+ pages = {66--77},
+ numpages = {12},
+ xurl = {http://dx.doi.org/10.1007/978-3-642-31606-7_6},
+ doi = {10.1007/978-3-642-31606-7_6},
+ acmid = {2402077},
+ publisher = {Springer-Verlag},
+ address = {Berlin, Heidelberg},
+} 
+@inproceedings{Iglesias:2011:HPT:2145432.2145577,
+ author = {Iglesias, Gonzalo and Allauzen, Cyril and Byrne, William and de Gispert, Adri\`{a} and Riley, Michael},
+ title = {{Hierarchical Phrase-based Translation Representations}},
+ booktitle = {{Proceedings of the Conference on Empirical Methods in Natural Language Processing}},
+ series = {EMNLP '11},
+ year = {2011},
+ isbn = {978-1-937284-11-4},
+ location = {Edinburgh, United Kingdom},
+ pages = {1373--1383},
+ numpages = {11},
+ xurl = {http://dl.acm.org/citation.cfm?id=2145432.2145577},
+ acmid = {2145577},
+ publisher = {Association for Computational Linguistics},
+ address = {Stroudsburg, PA, USA},
+} 
+@inproceedings{eisele2008hybridmemt,
+Title = {{Hybrid Architectures for Multi-Engine Machine Translation}},
+Author = {Andreas Eisele and Christian Federmann and Hans Uszkoreit and Hervé Saint-Amand and Martin Kay and Michael Jellinghaus and Sabine Hunsicker and Teresa Herrmann and Yu Chen},
+BookTitle = {{Proceedings of Translating and the Computer 30}},
+Year = {2008},
+Publisher = {ASLIB},
+Organization = {ASLIB/IMI}
+}
+@inproceedings{Hogan:1998:EMM:648179.749224,
+ author = {Hogan, Christopher and Frederking, Robert E.},
+ title = {{An Evaluation of the Multi-engine MT Architecture}},
+ booktitle = {{Proceedings of the Third Conference of the Association for Machine Translation in the Americas on Machine Translation and the Information Soup}},
+ series = {AMTA '98},
+ year = {1998},
+ isbn = {3-540-65259-0},
+ pages = {113--123},
+ numpages = {11},
+ xurl = {http://dl.acm.org/citation.cfm?id=648179.749224},
+ acmid = {749224},
+ publisher = {Springer-Verlag},
+ address = {London, UK, UK},
+} 
+@inproceedings{Heafield-wmt10,
+  author = {Kenneth Heafield and Alon Lavie},
+  title = {{{CMU} Multi-Engine Machine Translation for {WMT} 2010}},
+  year = {2010},
+  booktitle = {{Proceedings of the {ACL} 2010 Joint Fifth Workshop on Statistical Machine Translation and {MetricsMATR}}},
+  address = {Uppsala, Sweden},
+  pages = {93--98},
+  purl = {https://kheafield.com/papers/avenue/wmt\_2010.pdf},
+}
+@incollection{sanchez06a,
+  author    = {S{\'{a}}nchez-Mart{\'{\i}}nez, Felipe 
+               and Ney, Hermann},
+  title     = {{Using Alignment Templates to Infer Shallow-Transfer 
+               Machine Translation Rules}},
+  booktitle = {{Advances in Natural Language Processing, Proceedings of 
+               5th International Conference on Natural Language Processing {FinTAL}}},
+  publisher = {Springer-Verlag},
+  year      = {2006},
+  editor  = {Tapio Salakoski, Filip Ginter, Sampo Pyysalo and Tapio Pahikkala},
+  volume  = {4139},
+  series  = {Lecture Notes in Computer Science},
+  pages   = {756--767},
+  address = {},
+  note    = {},
+  location     = {Turku, Finland},
+  copyright    = {Springer-Verlag},
+  isbn         = {3-540-37334-9},
+  issn         = {0302-9743},
+}
+@Article{sanchez-cartagena16b,
+  author =       {Víctor M. S\'anchez-Cartagena and Juan Antonio
+                  P\'erez-Ortiz and Felipe S\'anchez-Mart\'inez},
+  title =        {{ruLearn: an open-source toolkit for the automatic
+                  inference of shallow-transfer rules for machine
+                  translation}},
+  journal =      {{The Prague Bulletin of Mathematical Linguistics}},
+  year =         2016,
+  volume =       106,
+  pages =        {193--204},
+  note =         {ISSN: 0032-6585}
+}
+@Article{Caseli2006,
+author="Caseli, H.~M.
+and Nunes, M.~G.~V.
+and Forcada, M.~L.",
+title="Automatic induction of bilingual resources from aligned parallel corpora: application to shallow-transfer machine translation",
+journal="Machine Translation",
+year="2006",
+month="Mar",
+day="01",
+volume="20",
+number="4",
+pages="227--245",
+issn="1573-0573",
+doi="10.1007/s10590-007-9027-9",
+xurl="https://doi.org/10.1007/s10590-007-9027-9"
+}
+@InProceedings{sanchez-cartagena12a,
+  author =       {V\'icor M. S\'anchez-Cartagena and Felipe
+                  S\'anchez-Mart\'inez and Juan Antonio P\'erez-Ortiz},
+  title =        {An open-source toolkit for integrating
+                  shallow-transfer rules into phrase-based satistical
+                  machine translation},
+  booktitle =    {{Proceedings of the Third International Workshop on
+                  Free/Open-Source Rule-Based Machine Translation}},
+  year =         2012,
+  pages =        {41--54},
+  address =      {Gothenburg, Sweden},
+  month =        {June}
+}
+@inproceedings{Koehn:2007:MOS:1557769.1557821,
+ author = {Koehn, Philipp and Hoang, Hieu and Birch, Alexandra and Callison-Burch, Chris and Federico, Marcello and Bertoldi, Nicola and Cowan, Brooke and Shen, Wade and Moran, Christine and Zens, Richard and Dyer, Chris and Bojar, Ond\v{r}ej and Constantin, Alexandra and Herbst, Evan},
+ title = {{Moses: Open Source Toolkit for Statistical Machine Translation}},
+ booktitle = {{Proceedings of the 45th Annual Meeting of the ACL on Interactive Poster and Demonstration Sessions}},
+ series = {ACL '07},
+ year = {2007},
+ location = {Prague, Czech Republic},
+ pages = {177--180},
+ numpages = {4},
+ xurl = {http://dl.acm.org/citation.cfm?id=1557769.1557821},
+ acmid = {1557821},
+ publisher = {Association for Computational Linguistics},
+ address = {Stroudsburg, PA, USA},
+} 
+@inproceedings{Dugast:2008:WRR:1626394.1626421,
+ author = {Dugast, Lo\"{\i}c and Senellart, Jean and Koehn, Philipp},
+ title = {{Can We Relearn an RBMT System?}},
+ booktitle = {{Proceedings of the Third Workshop on Statistical Machine Translation}},
+ series = {StatMT '08},
+ year = {2008},
+ isbn = {978-1-932432-09-1},
+ location = {Columbus, Ohio},
+ pages = {175--178},
+ numpages = {4},
+ xurl = {http://dl.acm.org/citation.cfm?id=1626394.1626421},
+ acmid = {1626421},
+ publisher = {Association for Computational Linguistics},
+ address = {Stroudsburg, PA, USA},
+}
+@INPROCEEDINGS{Surcin_2007.rapid,
+    author = {Sylvain Surcin and Elke Lange and Jean Senellart},
+    title = {{Rapid development of new language pairs at SYSTRAN}},
+    booktitle = {{Proceedings of the Eleventh Machine Translation Summit}},
+    year = {2007},
+    location = {Copenhagen, Denmark},
+    isbn = {978-87-90708-16-0},
+    pages = {443--449}
+}
+@inproceedings{dugast2009selective,
+  title={Selective addition of corpus-extracted phrasal lexical rules to a rule-based machine translation system},
+  author={Dugast, Loic and Senellart, Jean and Koehn, Philipp},
+  booktitle={{Proceedings of the Twelfth Machine Translation Summit}},
+  location = {Ottawa, Canada},
+  year={2009}
+}
+@inproceedings{dugast-senellart-koehn:2007:WMT,
+    author = {Dugast, Lo{\"\i}c and Senellart, Jean and Koehn, Philipp},
+    title = {{Statistical Post-Editing on SYSTRAN's Rule-Based Translation System}},
+    booktitle = {{Proceedings of the Second Workshop on Statistical Machine Translation}},
+    year = {2007},
+    address = {Prague, Czech Republic},
+    publisher = {Association for Computational Linguistics},
+    pages = {220--223},
+    xurl = {http://www.aclweb.org/anthology/W07-0732}
+}
+@inproceedings{ahsan2010coupling,
+  title={{Coupling Statistical Machine Translation with Rule-based Transfer and Generation}},
+  author={Ahsan, Arafat and Kolachina, Prasanth and Kolachina, Sudheer and Sharma, Dipti Misra and Sangal, Rajeev},
+  year = {2010},
+  booktitle = {{Proceedings of the Ninth Conference of the Association for Machine Translation in the Americas}},
+  address = {Denver, CO, USA},
+}
+@ARTICLE{Rosenblatt58theperceptron,
+    author = {F. Rosenblatt},
+    title = {{The Perceptron: A Probabilistic Model for Information Storage and Organization in The Brain}},
+    journal = {{Psychological Review}},
+    year = {1958},
+    pages = {65--386}
+}
+@inproceedings{neubig09interspeech,
+    title = {{A {WFST}-based Log-linear Framework for Speaking-style Transformation}},
+    author = {Graham Neubig and Shinsuke Mori and Tatsuya Kawahara},
+    booktitle = {{10th Annual Conference of the International Speech Communication Association (InterSpeech 2009)}},
+    address = {Brighton, UK},
+    month = {September},
+    pages = {1495--1498},
+    xurl = {http://www.phontron.com/paper/neubig09interspeech.pdf},
+    year = {2009}
+}
+
+@inproceedings{GJ2008,
+  author="J. Gintrowicz and K. Jassem",
+  title = "Using Regular Expressions in Translation Memories",
+  booktitle = "Proceedings of the International Multiconference on Computer Science and Information Technology",
+  volume = "34",
+  number = "4",
+  issn = {1896-7094},
+  year = "2008",
+  pages = "37--40",
+}
+@incollection{NIPS2012_4824,
+title = {{ImageNet Classification with Deep Convolutional Neural Networks}},
+author = {Alex Krizhevsky and Sutskever, Ilya and Hinton, Geoffrey E},
+booktitle = {{Advances in Neural Information Processing Systems 25}},
+editor = {F. Pereira and C. J. C. Burges and L. Bottou and K. Q. Weinberger},
+pages = {1097--1105},
+year = {2012},
+publisher = {Curran Associates, Inc.},
+xurl = {http://papers.nips.cc/paper/4824-imagenet-classification-with-deep-convolutional-neural-networks.pdf}
+}
+@article{DBLP:journals/corr/abs-1301-3781,
+  author    = {Tomas Mikolov and
+               Kai Chen and
+               Greg Corrado and
+               Jeffrey Dean},
+  title     = {{Efficient Estimation of Word Representations in Vector Space}},
+  journal   = {{CoRR}},
+  volume    = {abs/1301.3781},
+  year      = {2013},
+  xurl       = {http://arxiv.org/abs/1301.3781},
+}
+@phdthesis{mikolov2012phd,
+	Author = {Mikolov, T.},
+	School = {Brno University of Technology},
+	Title = {{Statistical Language Models Based on Neural Networks.}},
+	Year = {2012}
+}
+@article{44931,
+title = {{Exploiting Similarities among Languages for Machine Translation}},
+author  = {Tomas Mikolov and Quoc V. Le and Ilya Sutskever},
+  journal   = {{CoRR}},
+  volume    = {abs/1309.4168},
+year  = 2013
+}
+@InProceedings{Tu:2016:ACL,
+  author    = {Tu, Zhaopeng and Lu, Zhengdong and Liu, Yang and Liu, Xiaohua and Li, Hang},
+  title     = {{Modeling Coverage for Neural Machine Translation}},
+  booktitle = {{Proceedings of the 54th Annual Meeting of the Association for Computational Linguistics}},
+  pages = {76--85},
+  address = {Berlin, Germany},
+  year      = {2016},
 }
